src/assets/css/media_queries.scss
/* Responsive Design */
/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .screen-logo-loaded {
    display: none;
  }
}

@media only screen and (max-width: 600px) {
  .search-container {

    width: 100%;
    padding-top: 30%;

    .screen-logo {
      width: 70%;
    }

    .filtering-type {
      font-size: 8px;
    }
  }
  .search-container-loaded {
    .search-box-container {
      width: 100%;
    }
  }
  .list-videos {
    display: flex;
    flex-direction: column-reverse;

    .filtering-type-loaded {
      position: sticky;
      display: flex;
      flex-direction: row;
      padding-right: 0;
      z-index: 22;
      left: 0;
      bottom: 0;
      background: #fff;
      height: 60px;
      align-items: center;

      div.label {
        display: none;
      }

      div[class^="ct-"] {
        width: 100%;
        margin: 1px
      }
    }
    .list-videos-container{
      padding: 0px;
    }
  }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {

}

